objects/CLM_Visibility_Manager_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>CLM_Presentation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CLM Presentation</label>
        <referenceTo>Clm_Presentation_vod__c</referenceTo>
        <relationshipName>CLM_Visibility_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Add Visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove Visibility</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CLM_Visibility_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CLM Visibility Manager Transaction</label>
    <nameField>
        <displayFormat>CVT-{0000}</displayFormat>
        <label>CLM Visibility Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CLM Visibility Manager Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>